Upgrade Java runtime to Java 21 LTS